fix:修改错误返回code字段为数字类型
